[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl_stats"
authors = [
	{name = "Brent Barbachem", email = "barbacbd@gmail.com"},
]
description = "NHL Statistical package"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "python",
    "machine-learning",
    "statistics",
    "sports",
    "prediction",
    "python3",
    "pytorch",
    "predictive-modeling",
    "nhl-core",
    "sports-stats",
    "sports-analytics",
    "event-analysis"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: Freeware",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development"
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "coverage",
    "pytest-cov",
    "mock",
    "pylint",
    "pytest-order"
]

#[project.scripts]
