[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl_model"
authors = [
	{name = "Brent Barbachem", email = "barbacbd@gmail.com"},
]
description = "Package to create a model that can be used to predict the result of NHL games."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "python",
    "machine-learning",
    "statistics",
    "sports",
    "prediction",
    "python3",
    "pytorch",
    "predictive-modeling",
    "nhl-core",
    "sports-stats",
    "sports-analytics",
    "event-analysis"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: Freeware",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development"
]
dependencies = [
    "inquirer",
    "scipy",
    "keras",
    "tensorflow",
    "numpy",
    "pandas",
    "openpyxl",
    "mrmr_selection",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
tests = [
    "pytest",
    "coverage",
    "pytest-cov",
    "mock",
    "pylint",
    "pytest-order", 
    "pytest-subtests",
]
clean = [
    "pyclean",
]
[project.scripts]
nhl-predict = "nhl_model.exec:main"

[tool.setuptools.package-data]
'src' = [
    'nhl_model/support/schedules/2022/*.json',
    'nhl_model/support/NHLTeams.json',
]


