[metadata]
author = Brent Barbachem
author_email = barbacbd@gmail.com
maintainer = Brent Barbachem
maintainer_email = barbacbd@gmail.com
name = nhl_stats
version = 0.0.1
description = NHL Statistical package
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, machine-learning, statistics, sports, prediction, python3, pytorch, predictive-modeling, nhl, sports-stats, sports-analytics, event-analysis
license = MIT
license_files = file: LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: Freeware
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Langauge :: Python :: 3.11
    Topic :: Software Development
url = https://github.com/barbacbd/TimeToGoal

[options]
zip_safe = False
include_package_data = True
packages = find: 
install_requires =
    nhl
tests_require =
    pytest
    coverage
    pytest-cov
    mock
    pylint
    pytest-order
python_requires = >=3.6, <4

[options.package_data]
* = *.yaml

[options.packages.find]
exclude =
    hack*
